# -ESP32-S3-

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
main/: CMakeLists.txt  audio_ai.cpp  audio_ai.h  door_button.c  door_button.h  event_fusion.c  event_fusion.h  idf_component.yml  main.c  mic.c  mic.h  model_data.c  model_data.h  pir.c  pir.h
model/: README_TRAINING.md  doorbell_knock_classifier.tflite  extract_features.py  prepare_model.py  record_samples.py  requirements.txt  train_model.py
